k8s/applications/games/romm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: romm
  labels:
    app.kubernetes.io/name: romm
    app.kubernetes.io/part-of: games
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
