k8s/applications/games/romm/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: romm
  namespace: romm
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https-subdomains
    - name: external
      namespace: gateway
      sectionName: https-subdomains
  hostnames:
    - romm.smadja.dev
  rules:
    - backendRefs:
        - name: romm
          port: 8080
